--- a/src/cv.css
+++ b/src/cv.css
@@ -1,17 +1,22 @@
 * {
   box-sizing: border-box;
-  font-family: "Times New Roman", Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .info {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 }
 .full-name {
   font-weight: bold;
+  font-size: 1.4em;
 }
 .web {
   display: flex;
   flex-direction: column;
+}
+.gap {
+  margin-bottom: 20px;
 }
 a {
   all: unset;
@@ -38,6 +43,7 @@ ul {
   position: relative;
   display: flex;
   justify-content: space-between;
+  margin: 5px 0 5px 0;
 }
 .list-item .name-score {
   padding-left: 10px;
@@ -50,9 +56,12 @@ ul {
 }
 .cv-title {
   margin-top: 5px;
-  font-size: 1rem;
+  font-size: 1.1em;
+  padding: 2px 0 2px 0;
   border-bottom: 2px solid black;
+  margin-bottom: 5px;
 }
+
 .cv-skills {
   border-bottom: 2px black solid;
 }
