--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 }
 .about-div {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .name-and-url {
   display: flex;
